<resources>
    <string name="app_name">MPL</string>
    <string name="hint" />
    <string name="textvie">TextView</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="new_user_create_account">New User? Create Account</string>
    <string name="ame">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="too">TODO</string>
    <string name="otp">OTP</string>
    <string name="register">Register</string>
    <string name="verify_number">Verify Number</string>
    <string name="create_account">Create Account</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="title_activity_home__page">Home_Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Matches</string>
    <string name="menu_gallery">Teams</string>
    <string name="menu_slideshow">Season Ranking</string>
    <string name="menu_tools">How to play</string>
    <string name="menu_share">About us</string>
    <string name="menu_send">Contact Us</string>
    <string name="team_1_image">team 1 image</string>
    <string name="team_2_image">team 2 image</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="_10">10</string>
    <string name="qualifiers">Qualifiers</string>
    <string name="_1">1</string>
    <string name="dash">-</string>
    <string name="_2">2</string>
    <string name="_15">15</string>
    <string name="das">-</string>
    <string name="d">Milagres Premire League</string>
    <string name="s">A Fantasy Volleyball League</string>
    <string name="ranking">Ranking</string>
    <string name="set_team">Set Team</string>
    <string name="vs">vs</string>
    <string name="status">status</string>
    <string name="_0">0</string>
    <string name="agef">-</string>
    <string name="_05">0</string>
    <string name="_00">00</string>
    <string name="fg">00</string>
    <string name="title_activity_set_team2">SetTeam2</string>
    <string name="tab_text_1">Team 1</string>
    <string name="tab_text_2">Team 2</string>
    <string name="new_user">New User?</string>
    <string name="textview">TextView</string>
    <string name="ansel">Ansel</string>
    <string name="Akash">akash</string>
    <string name="stuart">Stuart</string>
    <string name="_100">#100</string>
    <string name="name">Name</string>
    <string name="total">Total</string>
    <string name="points">Points</string>
    <string name="date">date</string>
    <string name="select_team_captain">Select Team Captain :</string>
    <string name="select_team_vice_captain">Select Team Vice Captain :</string>
    <string name="save_your_team">Save Your Team</string>
    <string name="save">save</string>
    <string name="my_team">My Team</string>
    <string name="credits_used">Credits Used :</string>
    <string name="give_us_your_feedback">Give us Your feedback</string>
    <string name="type_here">Type here</string>
    <string name="submit">Submit</string>
    <string name="texview">TextView</string>
    <string name="step_1_select_the_match">Step 1 : Select the Match</string>
    <string name="step_2_set_your_team">Step 2 : Set Your Team</string>
    <string name="step_3_select_captain_and_vice_captain">Step 3 : Select Captain and Vice Captain</string>
    <string name="points_table">Points Table</string>
    <string name="todo">TODO</string>
    <string name="imgs">imgs</string>
    <string name="player_name">Player Name</string>
    <string name="credits">Credits :</string>
</resources>
