<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <View
        android:id="@+id/view8"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spsName"
        android:layout_width="224dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/player_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="12sp"
        app:autoSizeMaxTextSize="22sp"
        app:autoSizeMinTextSize="18sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <TextView
        android:id="@+id/spsCredits"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="@+id/view8"
        app:layout_constraintVertical_bias="0.444" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:showText="false"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8"
        tools:checked="false" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/credits"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintEnd_toStartOf="@+id/spsCredits"
        app:layout_constraintTop_toTopOf="@+id/view8" />

</androidx.constraintlayout.widget.ConstraintLayout>